--- a/style.css
+++ b/style.css
@@ -4,15 +4,22 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+:root {
+  --lightgray: #eceff2;
+  --gray: #757575;
+  --purple: #413e83;
+  --orange: #ff9632;
+  --green: #218169;
+}
 body {
   font-family: "Open Sans", sans-serif;
-  background: #eceff2;
+  background: var(--lightgray);
 }
 
 .wrapper {
   max-width: 1200px;
   margin: auto;
+  padding: 0 20px;
 }
 .about {
   padding: 20px 0;
@@ -21,8 +28,10 @@ body {
 
 .about span {
   font-size: 12px;
+  color: #757575;
 }
 header {
+  padding: 20px 0;
   background: white;
 }
 header .wrapper {
@@ -36,9 +45,10 @@ nav ul {
   list-style-type: none;
   display: flex;
 }
-nav ul li {
-  margin-left: 15px;
-}
 .nav-icon {
-  width: 20px;
+  width: 25px;
+  margin-left: 30px;
+}
+.logo {
+  height: 40px;
 }
