--- a/life_changes.css
+++ b/life_changes.css
@@ -11,6 +11,7 @@ main {
 
 .card {
     width: 500px;
+    background-color: #ffff;
     -webkit-box-shadow: 0px 0px 5px 0px rgba(99, 98, 99, 0.5);
     -moz-box-shadow: 0px 0px 5px 0px rgba(99, 98, 99, 0.5);
     box-shadow: 0px 0px 5px 0px rgba(99, 98, 99, 0.5);
