--- a/life_changes.css
+++ b/life_changes.css
@@ -1,47 +1,47 @@
 body {
-    background-color: #ECEFF2;
+  background: var(--lightgray);
 }
 
 main {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1040px;
-    margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .card {
-    width: 500px;
-    background-color: #ffff;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(99, 98, 99, 0.5);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(99, 98, 99, 0.5);
-    box-shadow: 0px 0px 5px 0px rgba(99, 98, 99, 0.5);
-    margin: 10px;
-    border-radius: 20px;
-    display: flex;
+  width: 550px;
+  background-color: #ffff;
+  -webkit-box-shadow: 9px 14px 60px -10px rgba(222, 222, 222, 1);
+  -moz-box-shadow: 9px 14px 60px -10px rgba(222, 222, 222, 1);
+  box-shadow: 9px 14px 60px -10px rgba(222, 222, 222, 1);
+  margin: 10px;
+  border-radius: 20px;
+  display: flex;
 }
 
 .details {
-    margin: 15px;
+  margin: 15px;
 }
 
 .details h2 {
-    margin: 0;
+  margin: 0;
 }
 
 .card button {
-    background-color: #386082;
-    color: white;
-    font-size: 12px;
-    padding: 10px;
-    border: none;
-    outline: none;
-    width: 120px;
-    border-radius: 2px;
-    cursor: pointer;
+  background-color: #386082;
+  color: white;
+  font-size: 12px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  width: 120px;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .card img {
-    width: 220px;
-    object-fit: cover;
-    border-radius: 20px;
+  width: 220px;
+  object-fit: cover;
+  border-radius: 20px;
 }
