--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ nav ul {
   border-top-left-radius: 25px;
   border-bottom-right-radius: 25px;
   margin: auto;
+  margin-bottom: 30px;
 }
 
 .lightbulb {
