--- a/life_changes.css
+++ b/life_changes.css
@@ -3,19 +3,18 @@ body {
 }
 
 main {
-  display: flex;
+  display: grid;
+  grid-template-columns: 535px 535px;
+  grid-gap: 30px;
   flex-wrap: wrap;
-  max-width: 1200px;
-  margin: auto;
 }
 
 .card {
-  width: 550px;
+  width: 535px;
   background-color: #ffff;
   -webkit-box-shadow: 9px 14px 60px -10px rgba(222, 222, 222, 1);
   -moz-box-shadow: 9px 14px 60px -10px rgba(222, 222, 222, 1);
   box-shadow: 9px 14px 60px -10px rgba(222, 222, 222, 1);
-  margin: 10px;
   border-radius: 20px;
   display: flex;
 }
@@ -25,23 +24,37 @@ main {
 }
 
 .details h2 {
+  font-size: 18px;
   margin: 0;
+  color: var(--blue);
 }
-
+.details p {
+  font-size: 12px;
+  color: gray;
+  font-weight: 300;
+}
 .card button {
-  background-color: #386082;
+  display: flex;
+  background: var(--purple);
   color: white;
   font-size: 12px;
-  padding: 10px;
+  padding: 14px 20px;
   border: none;
   outline: none;
   width: 120px;
-  border-radius: 2px;
+  border-radius: 5px;
   cursor: pointer;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.card img {
-  width: 220px;
+.card .thumbnail {
+  width: 190px;
+  height: 200px;
   object-fit: cover;
-  border-radius: 20px;
+  border-radius: 20px 0 0 20px;
+}
+
+button .arrow {
+  width: 7px;
 }
