--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1140px;
   margin: auto;
   padding: 0 20px;
 }
@@ -38,9 +38,7 @@ header {
 header .wrapper {
   display: flex;
   justify-content: space-between;
-
   align-items: center;
-  padding: 0;
 }
 nav ul {
   list-style-type: none;
@@ -59,6 +57,7 @@ nav ul {
   align-items: center;
   margin-top: 50px;
   margin-bottom: 50px;
+  justify-content: center;
 }
 .hero h1 {
   font-size: 30px;
@@ -76,7 +75,7 @@ nav ul {
   width: 200px;
 }
 .bulb-card {
-  width: 1200px;
+  width: 100%;
   height: 100px;
   display: flex;
   align-items: center;
