fixing the button

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   --orange: #ff9632;
   --green: #218169;
   --blue: #386082;
+  --darkgray: #434343;
 }
 body {
   font-family: "Open Sans", sans-serif;
