--- a/life_changes.css
+++ b/life_changes.css
@@ -25,17 +25,17 @@ main {
 }
 
 .details {
+  display: grid;
   margin: 15px;
 }
 
 .details h2 {
   font-size: 18px;
-  margin: 0;
   color: black;
 }
 .details p {
   font-size: 12px;
-  color: gray;
+  color: var(--darkgray);
   font-weight: 300;
 }
 .card button {
@@ -51,6 +51,8 @@ main {
   cursor: pointer;
   align-items: center;
   justify-content: space-between;
+  margin-top: 20px;
+  align-self: end;
 }
 
 .card .thumbnail {
