--- a/life_changes.css
+++ b/life_changes.css
@@ -11,14 +11,16 @@
 .details {
   display: grid;
   margin: 15px;
+  grid-template-rows: max-content;
 }
 
 .details h2 {
   font-size: 18px;
   color: black;
+  margin-bottom: 10px;
 }
 .details p {
-  font-size: 12px;
+  font-size: 14px;
   color: var(--darkgray);
   font-weight: 300;
 }
@@ -35,7 +37,6 @@
   cursor: pointer;
   align-items: center;
   justify-content: space-between;
-  margin-top: 20px;
   align-self: end;
 }
 
@@ -44,6 +45,8 @@
   height: 200px;
   object-fit: cover;
   border-radius: 20px 0 0 20px;
+  min-width: 190px;
+  background: var(--ghostGray);
 }
 
 button .arrow {
