--- a/style.css
+++ b/style.css
@@ -71,9 +71,11 @@ nav ul {
   justify-content: center;
 }
 .hero h1 {
+  line-height: 1.2em;
   font-size: 30px;
   max-width: 500px;
   color: var(--blue);
+  margin-bottom: 15px;
 }
 .hero h2 {
   color: var(--blue);
