--- a/life_changes.css
+++ b/life_changes.css
@@ -4,6 +4,7 @@
   box-shadow: 0px 3px 6px 0px rgba(99, 98, 99, 0.15);
   border-radius: 20px;
   display: flex;
+  overflow: hidden;
 }
 
 .details {
@@ -47,8 +48,22 @@
   border-radius: 20px 0 0 20px;
   min-width: 190px;
   background: var(--ghostGray);
+  display: block;
 }
-
+.thumbnail-container {
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: var(--purple);
+  opacity: 0.3;
+  z-index: 3;
+  left: 0;
+  top: 0;
+}
 button .arrow {
   width: 7px;
 }
