--- a/life_changes.css
+++ b/life_changes.css
@@ -62,7 +62,7 @@
   width: 100%;
   height: 100%;
   content: "";
-  background: var(--purple);
+  background: var(--blue);
   opacity: 0.3;
   z-index: 3;
   left: 0;
