--- a/styles/detail.css
+++ b/styles/detail.css
@@ -19,77 +19,82 @@ body {
   padding-bottom: 200px;
 }
 
-#content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.top-section {
+  background-color: var(--green);
+  position: relative;
+  z-index: -1;
 }
 
-.background {
-  margin: 0;
-  width: 100%;
-  height: 400px;
-  background-color: var(--green);
+.top-section .image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20vw;
+  opacity: 0.3;
+}
+
+.top-section-content {
+  padding-bottom: 72px;
 }
 
 .breadcrums {
   display: flex;
   list-style-type: none;
   color: white;
-  margin: 10px;
+  padding: 10px 0;
   font-size: 12px;
 }
 
-.header {
+.top-section {
   color: white;
 }
 
-h1 {
+.top-section h1 {
+  margin: 20px 0;
   font-size: 30px;
-    margin: 50px;
-  }
-
-h2 {
-  color: white;
-  margin: 50px;
-  font-weight: 400;
-  font-size: 20px;
 }
 
-h3 {
-  border-bottom: 1px solid #eceff2;
-  width: 100%;
+.top-content {
+  max-width: 800px;
+  line-height: 1.6em;
+  margin-bottom: 20px;
 }
 
-.card-one, .card-two {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
+.content-card {
   background: white;
   border-top-right-radius: 25px;
   border-bottom-left-radius: 25px;
-  padding: 15px;
-  margin-bottom:50px;
+  padding: 20px;
+  padding-bottom: 30px;
+  margin-bottom: 50px;
 }
 
-p {
-  margin-top: 10px;
+.content-card h3 {
+  border-bottom: 2px solid #eceff2;
+  padding-bottom: 7px;
+  margin-bottom: 7px;
 }
 
-.btn button {
+.content-card p {
+  padding: 5px 0;
+  line-height: 1.6em;
+}
+
+.content-card button {
   background-color: var(--purple);
   color: white;
-  padding: 10px;
-  margin-top: 10px;
+  display: inline-block;
+  padding: 12px 25px;
+  margin-top: 15px;
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
-} 
-
-/* .card-one {
-  margin-top: -50px;
+  border: none;
+  cursor: pointer;
+}
+.content-card button:hover {
 }
 
-.card-two {
-  margin-top: 50px;
-} */
+.content-cards {
+  margin-top: -56px;
+}
