--- a/styles/detail.css
+++ b/styles/detail.css
@@ -46,8 +46,8 @@ body {
 
 h1 {
   font-size: 30px;
-    margin: 50px;
-  }
+  margin: 50px;
+}
 
 h2 {
   color: white;
@@ -61,7 +61,8 @@ h3 {
   width: 100%;
 }
 
-.card-one, .card-two {
+.card-one,
+.card-two {
   display: flex;
   flex-direction: column;
   width: 90%;
@@ -69,7 +70,7 @@ h3 {
   border-top-right-radius: 25px;
   border-bottom-left-radius: 25px;
   padding: 15px;
-  margin-bottom:50px;
+  margin-bottom: 50px;
 }
 
 p {
@@ -84,7 +85,77 @@ p {
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
-} 
+}
+
+.card {
+  width: 100%;
+  background-color: #ffff;
+  box-shadow: 0px 3px 6px 0px rgba(99, 98, 99, 0.15);
+  border-radius: 20px;
+  display: flex;
+  overflow: hidden;
+}
+.details {
+  display: grid;
+  grid-template-rows: max-content;
+  margin: 15px;
+  grid-template-rows: max-content;
+}
+
+.details h2 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: black;
+  margin-bottom: 10px;
+}
+.details p {
+  font-size: 14px;
+  color: var(--darkgray);
+  font-weight: 300;
+}
+.card .more-btn {
+  display: flex;
+  background: var(--purple);
+  color: white;
+  font-size: 12px;
+  padding: 14px 20px;
+  border: none;
+  outline: none;
+  width: 120px;
+  border-radius: 5px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: space-between;
+  align-self: end;
+  text-decoration: none;
+}
+.more-btn .arrow {
+  width: 7px;
+}
+
+.card .thumbnail {
+  width: 190px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px 0 0 20px;
+  min-width: 190px;
+  background: var(--ghostGray);
+  display: block;
+}
+.thumbnail-container {
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: var(--blue);
+  opacity: 0.3;
+  z-index: 3;
+  left: 0;
+  top: 0;
+}
 
 /* .card-one {
   margin-top: -50px;
